src/test/resources/typeSystemTestModels/valid/interfaces/InterfaceBoundErasuresAreDifferent.java
package typeSystemTestModels.valid.interfaces;

import java.util.ArrayList;
import java.util.List;
import java.lang.String;

public interface InterfaceBoundErasuresAreDifferent<T extends ArrayList<String> & List<String>> {


}