src/test/resources/typeSystemTestModels/invalid/interfaces/InterfaceCannotExtendClasses.java
package typeSystemTestModels.invalid.interfaces;

import java.util.ArrayList;
import java.lang.String;

public interface InterfaceCannotExtendClasses extends ArrayList<String> {


}